--- a/About.html
+++ b/About.html
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="https://msatanzeel.github.io/Codemania_using_bootsrap/index">Home</a>
+                        <a class="nav-link " aria-current="page" href="https://Amatul-Taha.github.io/Codemania_using_bootsrap/index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://msatanzeel.github.io/Codemania_using_bootsrap/About">About</a>
+                        <a class="nav-link active" href="https://Amatul-Taha.github.io/Codemania_using_bootsrap/About">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
