--- a/About.html
+++ b/About.html
@@ -49,7 +49,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://msatanzeel.github.io/Codemania_using_bootsrap/contact">Contact me</a>
+                        <a class="nav-link" href="https://Amatul-Taha.github.io/Codemania_using_bootsrap/contact">Contact me</a>
                     </li>
                 </ul>
                 <form class="d-flex">
