--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="https://Amatul-Taha.github.io/Codemania_using_bootsrap/index">Home</a>
+                        <a class="nav-link active" aria-current="page" href="https://amatul-taha.github.io/Codemania_using_bootstrap/index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://Amatul-Taha.github.io/Codemania_using_bootsrap/About">About</a>
+                        <a class="nav-link" href="https://amatul-taha.github.io/Codemania_using_bootstrap/About">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -61,7 +61,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="https://Amatul-Taha.github.io/Codemania_using_bootsrap/contact">Contact me</a>
+                        <a class="nav-link" href="https://amatul-taha.github.io/Codemania_using_bootstrap/contact">Contact me</a>
                     </li>
 
                 </ul>
